# context-orchestrator

./: .gitignore  CLAUDE.md  Cargo.toml  ca-bundle.crt  run.sh
.cargo/: config.toml
.claude/: settings.json
.claude/skills/: research.md
docs/: MVP.md  VISION.md
docs/design/: 01-graph-extensions-and-context-panel.md  02-background-llm-and-tool-invocation.md  03-tool-call-foundation.md  04-graph-scheduler-qa-relationships.md  05-git-repository-graph-nodes.md  06-parallel-autonomous-agents.md  07-tui-graph-explorer.md
docs/research/: 01-graph-context-and-prior-art.md  02-developer-ux-and-workflow.md  03-architecture-and-technical-risks.md  04-beads-agent-memory-system.md  05-gastown-multi-agent-orchestration.md  06-inline-tool-invocation-patterns.md  06-token-caching-strategies.md  07-inter-agent-communication.md  08-runtime-storage-options.md  09-embedding-based-connection-suggestions.md  10-classical-ml-node-enrichment.md  11-multi-source-input-architecture.md  12-claude-code-subscription-usage.md  13-git-integration.md  14-system-and-agent-prompt-design.md  15-llm-written-plugins.md  16-llm-file-editing-strategies.md  17-litellm-provider-integration.md  18-terminal-text-editing.md  19-llm-memory-management.md  19-llm-question-surfacing.md  20-kubernetes-inspired-agent-scheduling.md  21-graph-scheduler-qa-relationships.md  22-graph-context-building-strategies.md  23-ecosystem-tool-integration.md  24-graph-conversation-compaction.md  24-llm-eval-harnesses.md  25-system-prompt-integration.md  26-web-search-implementation-options.md  27-llm-defined-event-triggers.md  28-terminal-ux-notifications.md  29-tts-rust-ecosystem.md
src/: app.rs  config.rs  config_tests.rs  graph.rs  main.rs  migration.rs  migration_tests.rs  persistence.rs  persistence_tests.rs  tasks.rs  tasks_tests.rs  tool_executor.rs  tool_executor_tests.rs  tools.rs  tools_tests.rs
src/app/: agent_loop.rs  agent_streaming.rs  context.rs  coordination.rs  event_dispatch.rs  graph_actions.rs  mod.rs  (+6 more)
(+153 files in other folders)
