[package]
name = "context-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
git2 = "0.20"
notify = "7"
notify-debouncer-mini = "0.5"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[dev-dependencies]
tempfile = "3"
