[package]
name = "context-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["stream", "json", "socks"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
futures = "0.3"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
figment = { version = "0.10", features = ["env"] }
git2 = "0.20"
notify = "8"
notify-debouncer-mini = "0.7"
streamdown-parser = "0.1"
regex = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tokio-util = { version = "0.7", features = ["rt"] }
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[dev-dependencies]
tempfile = "3"
